# llambda.cpp

./: .gitignore  .gitmodules  Dockerfile.base  Dockerfile.build  Dockerfile.embed  Dockerfile.generate  README.md  bootstrap  build.sh  function.sh  update-functions.sh
langchain/: README.md  pyproject.toml
langchain/langchainx/embeddings/: __init__.py  llambdacpp.py  pyproject.toml
langchain/langchainx/llms/: __init__.py  llambdacpp.py  pyproject.toml
langchain/tests/: .gitignore
model/: README.md
