[tool.poetry]
name = "langchainx"
version = "0.1.0"
description = ""
authors = ["dooreelko <github.63bjv@simplelogin.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
langchain = "^0.0.263"
pydantic = ">=1,<3"
requests = "^2"
aiohttp = "^3.8.5"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
